Cleaned up several displayed warnings in SimulationModel and SimulationView.